// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convertNotes > converts markdown to richText 1`] = `
{
  "newHtml": "<h1>This is a title</h1>
<p>This is a paragraph. The next thing is a dangerous script tag:</p>
<h2>This is a subtitle</h2>
<p>This is another paragraph. It has a <a href="https://example.com">link</a> in it. It&#39;s quite long
and has a line break in it.</p>
&lt;script&gt;alert("hello")&lt;/script&gt;

<p>This is a list:</p>
<ul>
<li>item 1</li>
<li>item 2</li>
<li>item 3</li>
</ul>
",
  "newSource": "<h1>This is a title</h1>
<p>This is a paragraph. The next thing is a dangerous script tag:</p>
<h2>This is a subtitle</h2>
<p>This is another paragraph. It has a <a href="https://example.com">link</a> in it. It&#39;s quite long
and has a line break in it.</p>
<script>alert("hello")</script>

<p>This is a list:</p>
<ul>
<li>item 1</li>
<li>item 2</li>
<li>item 3</li>
</ul>
",
}
`;

exports[`convertNotes > converts plain to richText 1`] = `
{
  "newHtml": "# This is a title<br /><br />This is a paragraph. The next thing is a dangerous script tag:<br /><br />## This is a subtitle<br /><br />This is another paragraph. It has a [link](https://example.com) in it. It&#39;s quite long<br />and has a line break in it.<br /><br />&lt;script&gt;alert(&quot;hello&quot;)&lt;/script&gt;<br /><br />This is a list:<br /><br />- item 1<br />- item 2<br />- item 3<br />",
  "newSource": "# This is a title<br/><br/>This is a paragraph. The next thing is a dangerous script tag:<br/><br/>## This is a subtitle<br/><br/>This is another paragraph. It has a [link](https://example.com) in it. It&#39;s quite long<br/>and has a line break in it.<br/><br/>&lt;script&gt;alert(&quot;hello&quot;)&lt;/script&gt;<br/><br/>This is a list:<br/><br/>- item 1<br/>- item 2<br/>- item 3<br/>",
}
`;

exports[`convertNotes > converts richText to markdown 1`] = `
{
  "newHtml": "<h1>This is a title</h1>
<p>This is a paragraph. The next thing is a dangerous script tag:</p>
<h2>This is a subtitle</h2>
<p>This is another paragraph. It has a <a href="https://example.com">link</a> in it. It&#39;s quite long and has a line break in it.</p>
&lt;script&gt;alert("hello")&lt;/script&gt;

<p>This is a list:</p>
<ul>
<li>item 1</li>
<li>item 2</li>
<li>item 3</li>
</ul>
",
  "newSource": "This is a title
===============

This is a paragraph. The next thing is a dangerous script tag:

This is a subtitle
------------------

This is another paragraph. It has a [link](https://example.com) in it. It's quite long and has a line break in it.

<script>alert("hello")</script>

This is a list:

*   item 1
*   item 2
*   item 3",
}
`;

exports[`convertNotes > converts richText to plain 1`] = `
{
  "newHtml": "This is a title<br />===============<br /><br />This is a paragraph. The next thing is a dangerous script tag:<br /><br />This is a subtitle<br />------------------<br /><br />This is another paragraph. It has a [link](https://example.com) in it. It&#39;s quite long and has a line break in it.<br /><br />&lt;script&gt;alert(&quot;hello&quot;)&lt;/script&gt;<br /><br />This is a list:<br /><br />*   item 1<br />*   item 2<br />*   item 3",
  "newSource": "This is a title
===============

This is a paragraph. The next thing is a dangerous script tag:

This is a subtitle
------------------

This is another paragraph. It has a [link](https://example.com) in it. It's quite long and has a line break in it.

<script>alert("hello")</script>

This is a list:

*   item 1
*   item 2
*   item 3",
}
`;

exports[`toHtml > converts markdown to html 1`] = `
"<h1>This is a title</h1>
<p>This is a paragraph. The next thing is a dangerous script tag:</p>
<h2>This is a subtitle</h2>
<p>This is another paragraph. It has a <a href="https://example.com">link</a> in it. It&#39;s quite long
and has a line break in it.</p>
&lt;script&gt;alert("hello")&lt;/script&gt;

<p>This is a list:</p>
<ul>
<li>item 1</li>
<li>item 2</li>
<li>item 3</li>
</ul>
"
`;

exports[`toHtml > converts plain text to html 1`] = `"# This is a title<br /><br />This is a paragraph. The next thing is a dangerous script tag:<br /><br />## This is a subtitle<br /><br />This is another paragraph. It has a [link](https://example.com) in it. It&#39;s quite long<br />and has a line break in it.<br /><br />&lt;script&gt;alert(&quot;hello&quot;)&lt;/script&gt;<br /><br />This is a list:<br /><br />- item 1<br />- item 2<br />- item 3<br />"`;

exports[`toHtml > converts rich text to html 1`] = `
"<h1>This is a title</h1>
<p>This is a paragraph. The next thing is a dangerous script tag:</p>
<h2>This is a subtitle</h2>
<p>This is another paragraph. It has a <a href="https://example.com">link</a> in it. It&#39;s quite long
and has a line break in it.</p>
&lt;script&gt;alert("hello")&lt;/script&gt;

<p>This is a list:</p>
<ul>
<li>item 1</li>
<li>item 2</li>
<li>item 3</li>
</ul>
"
`;
